# UPP

./: .gitignore  .gitmodules  .readthedocs.yml  2D-decomp_8md_source.html  ALLOCATE__ALL_8f.html  ALLOCATE__ALL_8f.js  ALLOCATE__ALL_8f_source.html  ASSIGNNEMSIOVAR_8f_source.html  AVIATION.f  AVIATION_8f.html  AVIATION_8f.js  AVIATION_8f_source.html  AllGETHERV_GSD.f  AllGETHERV__GSD_8f_source.html  BNDLYR.f  BNDLYR_8f.html  BNDLYR_8f.js  BNDLYR_8f_source.html  BOUND.f  BOUND_8f.html  BOUND_8f.js  BOUND_8f_source.html  CALCAPE.f  CALDRG.f  CALDRG_8f.html  CALDRG_8f.js  CALDRG_8f_source.html  CALDWP.f  CALDWP_8f.html  CALDWP_8f.js  CALDWP_8f_source.html  CALGUST.f  CALGUST_8f.html  CALGUST_8f.js  CALGUST_8f_source.html  CALHEL.f  CALHEL.f_org  CALHEL2_8f.html  CALHEL2_8f.js  CALHEL2_8f_source.html  (+650 more)
.github/: CODEOWNERS
ci/: Jenkins.test  Jenkinsfile  rt-status.py  rt.sh  spack.yaml
cmake/: PackageConfig.cmake.in
comupp/: .gitignore  clean  compile  configure  makefile
doc/: Doxyfile.in  user_guide.md
docs/: 2D-decomp.md  Acknowledgments.rst  AddNewVariable.rst  Add_New_UPP_Variable.lyx  BuildRunWithoutApp.rst  CMakeLists.txt  CodeOverview.rst  Doxyfile.in  InputsOutputs.rst  Installation.rst  Introduction.rst  MRW_GFSPRS_table.csv  MRW_GFSPRS_table.rst  Regridding.rst  Running.rst  SRW_BGDAWP_table.csv  SRW_BGDAWP_table.rst  SRW_BGRD3D_table.csv  SRW_BGRD3D_table.rst  UFS_unified_variables_table.csv  UFS_unified_variables_table.rst  UPP_GRIB1_Table.lyx  UPP_GRIB2_Extended_Table.lyx  UPP_GRIB2_Table.csv  UPP_GRIB2_Table.lyx  UPP_GRIB2_Table.rst  UPP_GRIB2_Table_byID.csv  UPP_GRIB2_Table_byID.rst  UPP_Users_guide_V3_release_v3.lyx  UPP_Users_guide_V4.1.lyx  UPP_Users_guide_V4.1_beta.lyx  UPP_Users_guide_V4.rst  conf.py  index.rst  module-load-make-howto.txt  user_guide.md
driver/: run_JGLOBAL_NCEPPOST_theia-Wen.Meng  run_gtg_post.sh.cray  run_gtg_post.sh.cray.cron  run_gtg_post.sh.cray.fv3  run_gtg_post.sh.dell  run_gtg_post.sh.hera  run_gtg_post.sh.theia  run_gtg_post.sh.wcoss  submit_run_JGLOBAL_NCEPPOST_theia-Wen.Meng.sh
jobs/: JGDAS_NCEPPOST  JGFS_NCEPPOST  JGFS_NCEPPOST_GRB2  JGLOBAL_ATMOS_NCEPPOST  JGLOBAL_ATMOS_POST_MANAGER  JGLOBAL_NCEPPOST  JGLOBAL_POST_MANAGER  J_NCEPPOST
modulefiles/: cheyenne  cheyenne_gnu  gaea.lua  gaea_c5.lua  gaeac5.lua  gaeac6.lua  hera  hera.lua  hera_c.lua  hera_external_ifi.lua  hera_ifi_test_prereqs.lua  hercules.lua  jet  jet.lua  jet_c.lua  jet_external_ifi.lua  noaacloud.lua  orion  orion.lua  s4  s4.lua  upp_common.lua  wcoss2  wcoss2.lua  wcoss2_a.lua  wcoss_cray  wcoss_dell_p3
nceppost_moorthi_redmem_merge/: run_JGDAS_NCEPPOST.sh  run_JGFS_NCEPPOST
oodles/: CALTAU.f_org  nemsio_module.f_org
parm/: 3drtma.xml  3drtma_postcntrl.xml  CMakeLists.txt  POST-XML-Library-NT.pl  POST_XML_Flat_File_processor_POST_FlatFile.log.20221208  POST_XML_Flat_File_processor_POST_FlatFile.log.20240103  PostXMLPreprocessor.pl  README  README.make_flatfile  aqm.xml  fv3lam.xml  fv3lam_cmaq.xml  fv3lam_cmaq.xml-org  fv3lam_cmaq_post_avblflds.xml-new  fv3lam_cmaq_post_avblflds.xml-org  fv3lam_goes.xml  fv3lam_post_avblflds.xml  fv3lam_rrfs.xml  fv3sar.xml  fv3sar.xml-new  fv3sar_post_avblflds.xml  gdas_cntrl.parm  gfs_cntrl.parm  global_1x1_paramlist_g2  global_1x1_paramlist_g2.anl  global_1x1_paramlist_g2.f000  global_1x1_paramlist_g2_chem  global_master-catchup_parmlist_g2  gtg.config.gfs  gtg_imprintings.txt  hafs.xml  hfip_postcntrl.xml  hrrr_postcntrl.xml  makefile  makefile-cmaq  makefile-org  makefile_comm  nam_cntrl_cmaq.xml  nam_post_avblflds.xml  ngac_post_avblflds.xml  (+111 more)
scripts/: exgdas_atmos_nceppost.sh  exgdas_nceppost.sh  exgdas_nceppost.sh.ecf  exgfs_atmos_nceppost.sh  exgfs_nceppost.sh  exgfs_nceppost.sh.ecf  exglobal_atmos_pmgr.sh  exglobal_pmgr.sh.ecf  exwafs_atmos_nceppost.sh  global_nceppost.sh  post_avblflds.xml  postcntrl_gfs.xml  postcntrl_gfs_goes.xml  run_post_gfs.sh  run_post_nmmb.sh  run_post_nmmb_pe_test.sh  run_unipost  run_unipost_frames  run_unipost_gracet  run_unipost_minutes  run_unipostandgempak  run_unipostandgrads  run_unipostandgrads_global  run_upp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_10.js  files_11.js  files_12.js  files_13.js  files_14.js  files_15.js  files_2.js  (+69 more)
sorc/: CMakeLists.txt  build_ncep_post.sh  ncep_post_gtg.fd
sorc/ncep_post.fd/: ALLOCATE_ALL.f  ALLOCATE_ALL.f-org  ALLOCATE_ALL.f-pmtf  ASSIGNNEMSIOVAR.f  AVIATION.f  AllGETHERV_GSD.f  BNDLYR.f  BOUND.f  CALCAPE.f  CALCAPE2.f  CALCHIPSI.f  CALDRG.f  CALDWP.f  CALGUST.f  CALHEL.f  CALHEL2.f  CALHEL3.f  CALLCL.f  CALMCVG.f  CALMICT.f  CALPBL.f  CALPBLREGIME.f  CALPOT.f  CALPW.f  CALRAD_WCLOUD_newcrtm.f  CALRCH.f  CALRH.f  CALRH_GFS.f  CALRH_PW.f  CALSTRM.f  CALTAU.f  CALTHTE.f  CALUPDHEL.f  CALVESSEL.f  CALVIS.f  CALVIS_GSD.f  CALVOR.f  CALWXT.f  CALWXT_BOURG.f  CALWXT_DOMINANT.f  (+188 more)
src/: ALLOCATE_ALL.f  AVIATION.f  BNDLYR.f  BOUND.f  CALCAPE.f  CALDRG.f  CALGUST.f  CALHEL.f  CALMCVG.f  CALMICT.f  CALPBL.f  CALPOT.f  CALRAD_WCLOUD.f  CALRAD_WCLOUD_newcrtm.f  CALRCH.f  CALRH.f  CALRH_GFS.f  CALRH_PW.f  CALTAU.f  CALVIS_GSD.f  CALVOR.f  CALWXT.f  CALWXT_BOURG.f  CALWXT_DOMINANT.f  CALWXT_EXPLICIT.f  CALWXT_RAMER.f  CALWXT_REVISED.f  CLDRAD.f  CTLBLK.f  DEALLOCATE.f  DEWPOINT.f  EXCH.f  FDLVL.f  FILL_PSETFLD.f  FIXED.f  FRZLVL.f  GETGBANDSCATTER.f  GFIP3.f  GFSPOST.F  GFSPOST.f  (+64 more)
tests/: compile_upp.sh  detect_machine.sh
upp-srw-v2.2.0/: ALLOCATE__ALL_8f.html  ALLOCATE__ALL_8f_source.html  ASSIGNNEMSIOVAR_8f_source.html  AVIATION_8f.html  AVIATION_8f_source.html  AllGETHERV__GSD_8f_source.html  BNDLYR_8f.html  BNDLYR_8f_source.html  BOUND_8f.html  BOUND_8f_source.html  CALDRG_8f.html  CALDRG_8f.js  CALDRG_8f_source.html  CALDWP_8f.html  CALDWP_8f_source.html  CALGUST_8f.html  CALGUST_8f_source.html  (+362 more)
(+1362 files in other folders)
